# Zyzz

./: .env.example  .gitignore  CLAUDE.md  MASTER_CONTEXT.md  PROJECT_STATUS.md  README.md  ROADMAP.md  Zyzz.spec  main.py  pyproject.toml
apps/desktop/: app.py  bridge.py  workers.py
apps/desktop/ui/: style.qss
apps/desktop/ui/qml/: HistoryDrawer.qml  InputBar.qml  PipelineBar.qml  ResponsePanel.qml  ZyzzCore.qml  main.qml
apps/desktop/ui/web/: finance.html  finance.jsx  package-lock.json  package.json
apps/desktop/windows/: main_window.py
core/automations/: models.py  service.py
core/brain/: orchestrator.py
core/calendar/: models.py  service.py
core/chat/: models.py  service.py
core/history/: models.py  service.py
core/memory/: models.py  service.py
core/providers/: providers.py
core/router/: models.py  service.py
core/shared/: metrics.py
core/tools/: builtin.py  models.py  registry.py
core/voice/: service.py
scripts/: build_installer.py
