[project]
name = "zyzz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.12.1",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
    "pyttsx3>=2.99",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]
